bugfix, article now has z-index 1000 to prevent other elements to be placed above. and js-fix, music continues to play if multiple songs are provided

--- a/dev_iPlayMusic/sys/iPlayMusic.css
+++ b/dev_iPlayMusic/sys/iPlayMusic.css
@@ -13,7 +13,8 @@
     top: 0px;
     width: 100%;
     background-color: rgba(0,0,0,0.2);
-    -webkit-tap-highlight-color: rgba(0,0,0,0); 
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    z-index: 1000;
 }
 .contracted {
     height: 55px;
@@ -38,8 +39,6 @@ audio {
     padding: 0;
 }
 
-/* an ugly hack for FF to fix so my canvas is only 1 px high */
-
 #progressbar {
     background-color: rgba(50,50,50,0.4);
     position: absolute;
@@ -61,6 +60,7 @@ audio {
     vertical-align: top;
     color: #fff;
     list-style: none;
+    font-size: 12px;
 }
 #track_list li {
     cursor: pointer;
@@ -109,7 +109,7 @@ img#album_cover {
     width: 300px;
     height: 50px;
     position: relative;
-    top: opx;
+    top: 0px;
 }
 
 #controls li {
